# ADRTool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
documentation/: specification.md  usage-guide.md
requirements/: .adr-template.md  Requirements.md  ToDo.md  specification.md
src/: cli.rs  id.rs  init.rs  main.rs  modify.rs  new.rs  output.rs  resolver.rs  template.rs  toc.rs
tests/: help_init.rs  mod_command.rs  new_command.rs  toc_command.rs
