[package]
name = "adr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.61"
chrono = { version = "0.4.40", default-features = true }
is-terminal = "0.4.17"
pathdiff = "0.2.3"
thiserror = "2.0.11"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
